#12633 fix z-index bug drag graph analytics

--- a/pandora_console/include/styles/pandora.css
+++ b/pandora_console/include/styles/pandora.css
@@ -13588,3 +13588,7 @@ button.disabled {
   background: #c0ccdc !important;
   border: 0px;
 }
+
+.ui-draggable-handle {
+  z-index: 2 !important;
+}
